6(预约历史记录).

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -109,6 +109,14 @@
                 android:name=".RetrievePasswordActivity"
                 android:theme="@style/MyAppTheme">
         </activity>
+        <activity
+                android:name=".BankCardInfoActivity"
+                android:theme="@style/MyAppTheme">
+        </activity>
+        <activity
+                android:name=".ReservationHistoryActivity"
+                android:theme="@style/MyAppTheme">
+        </activity>
     </application>
 
 </manifest>
