7(RecycleView添加删除、传递对象.)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -117,6 +117,10 @@
                 android:name=".ReservationHistoryActivity"
                 android:theme="@style/MyAppTheme">
         </activity>
+        <activity
+                android:name=".SettingActivity"
+                android:theme="@style/MyAppTheme">
+        </activity>
     </application>
 
 </manifest>
